--- a/templates/achievements.html
+++ b/templates/achievements.html
@@ -17,31 +17,28 @@
                 </div>
                 <div class="island center">
                     <a class="navbtn btn" href="/"><i class="bi bi-house"></i> Home</a>
-                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive-fill"></i> Projects</a>
-                    <a class="navbtn btn" href="/achievements"><i class="bi bi-trophy"></i> Achievements</a>
+                    <a class="navbtn btn" href="/projects"><i class="bi bi-archive"></i> Projects</a>
+                    <a class="navbtn btn navselected" href="/achievements"><i class="bi bi-trophy-fill"></i> Achievements</a>
                 </div>
             </nav>
             
-            <h1 id="projectsh1">Featured UI/UX Projects</h1>
+            <h1 id="projectsh1">What are you looking for?</h1>
 
             <div class="grid">
                 <div id="projs" class="island">
                     
                     <div class="cardholder">
-                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/3D-World-Editor', '_blank')">
-                            <img class="cardimg-l" src="static/worldeditor.png">
-                            <p class="cardcontent-l specialtxt">3D World Editor</p>
-                            <p class="cardsubcontent-l">View Project</p>
+                        <div class="profcard-m" onclick="window.location.href='/certification';">
+                            <img class="cardimg-m" src="static/certificate.png">
+                            <p class="cardcontent-l specialtxt">Certification</p>
                         </div>
-                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/Snake-Game', '_blank')">
-                            <img class="cardimg-l" src="static/snake.png">
-                            <p class="cardcontent-l specialtxt">Retro Snake</p>
-                            <p class="cardsubcontent-l">View Project</p>
+                        <div class="profcard-m" onclick="window.location.href='/competitions';">
+                            <img class="cardimg-m" src="static/competition.png">
+                            <p class="cardcontent-l specialtxt">Competitions</p>
                         </div>
-                        <div class="profcard-l" onclick="window.open('https://rafilalam.github.io/', '_blank')">
-                            <img class="cardimg-l" src="static/portfoliowebsite.png">
-                            <p class="cardcontent-l specialtxt">Static Portfolio Website</p>
-                            <p class="cardsubcontent-l">View Project</p>
+                        <div class="profcard-m" onclick="window.location.href='/testimonials';">
+                            <img class="cardimg-m" src="static/testimonial.png">
+                            <p class="cardcontent-l specialtxt">Testimonials</p>
                         </div>
                     </div>
                 </div>
