--- a/templates/build.html
+++ b/templates/build.html
@@ -17,30 +17,30 @@
                 </div>
                 <div class="island center">
                     <a class="navbtn btn" href="/"><i class="bi bi-house"></i> Home</a>
-                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive"></i> My Projects</a>
-                    <a class="navbtn btn" href="/about"><i class="bi bi-file-earmark-person"></i> About Me</a>
+                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive-fill"></i> Projects</a>
+                    <a class="navbtn btn" href="/achievements"><i class="bi bi-trophy"></i> Achievements</a>
                 </div>
             </nav>
             
-            <h1 id="projectsh1">Featured Software Projects</h1>
+            <h1 id="projectsh1">Featured Software Development Projects</h1>
 
             <div class="grid">
                 <div id="projs" class="island">
                     
                     <div class="cardholder">
-                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/3D-World-Editor', '_blank')">
-                            <img class="cardimg-l" src="static/worldeditor.png">
-                            <p class="cardcontent-l specialtxt">3D World Editor</p>
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/TrackMate-App', '_blank')">
+                            <img class="cardimg-l" src="static/trackmate.png">
+                            <p class="cardcontent-l specialtxt">TrackMate</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
-                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/Snake-Game', '_blank')">
-                            <img class="cardimg-l" src="static/snake.png">
-                            <p class="cardcontent-l specialtxt">Retro Snake</p>
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/Hermes-the-AI-Assistant', '_blank')">
+                            <img class="cardimg-l" src="static/hermes.png">
+                            <p class="cardcontent-l specialtxt">Hermes: Desktop Assistant</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
-                        <div class="profcard-l" onclick="window.open('https://rafilalam.github.io/', '_blank')">
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/CLI-Messenger', '_blank')">
                             <img class="cardimg-l" src="static/portfoliowebsite.png">
-                            <p class="cardcontent-l specialtxt">Static Portfolio Website</p>
+                            <p class="cardcontent-l specialtxt">CLI Messaging App</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
                     </div>
