--- a/templates/certification.html
+++ b/templates/certification.html
@@ -17,9 +17,25 @@
                 </div>
                 <div class="island center">
                     <a class="navbtn btn" href="/"><i class="bi bi-house"></i> Home</a>
-                    <a class="navbtn btn" href="/projects"><i class="bi bi-archive"></i> My Projects</a>
-                    <a class="navbtn btn navselected" href="/about"><i class="bi bi-file-earmark-person"></i> About Me</a>
+                    <a class="navbtn btn" href="/projects"><i class="bi bi-archive"></i> Projects</a>
+                    <a class="navbtn btn navselected" href="/achievements"><i class="bi bi-trophy-fill"></i> Achievements</a>
                 </div>
             </nav>
+            
+            <h1 id="projectsh1">My Course Certificates</h1>
+
+            <div class="grid">
+                <div id="projs" class="island">
+                    
+                    <div class="cardholder">
+                        <div class="profcard-l" onclick="window.open('https://certificates.cs50.io/feaf15c3-7356-45dc-ad74-b7b612dcd021.pdf?size=letter', '_blank')">
+                            <img class="cardimg-l" src="static/CS50x.png">
+                            <p class="cardcontent-l specialtxt">Harvard University's CS50x</p>
+                            <p class="cardsubcontent-l">View Certificate</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
+</html>
