--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,8 +17,8 @@
                 </div>
                 <div class="island center">
                     <a class="navbtn btn" href="/"><i class="bi bi-house"></i> Home</a>
-                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive"></i> My Projects</a>
-                    <a class="navbtn btn" href="/about"><i class="bi bi-file-earmark-person"></i> About Me</a>
+                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive-fill"></i> Projects</a>
+                    <a class="navbtn btn" href="/achievements"><i class="bi bi-trophy"></i> Achievements</a>
                 </div>
             </nav>
             
