--- a/templates/think.html
+++ b/templates/think.html
@@ -17,8 +17,8 @@
                 </div>
                 <div class="island center">
                     <a class="navbtn btn" href="/"><i class="bi bi-house"></i> Home</a>
-                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive"></i> My Projects</a>
-                    <a class="navbtn btn" href="/about"><i class="bi bi-file-earmark-person"></i> About Me</a>
+                    <a class="navbtn btn navselected" href="/projects"><i class="bi bi-archive-fill"></i> Projects</a>
+                    <a class="navbtn btn" href="/achievements"><i class="bi bi-trophy"></i> Achievements</a>
                 </div>
             </nav>
             
@@ -28,19 +28,19 @@
                 <div id="projs" class="island">
                     
                     <div class="cardholder">
-                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/3D-World-Editor', '_blank')">
-                            <img class="cardimg-l" src="static/worldeditor.png">
-                            <p class="cardcontent-l specialtxt">3D World Editor</p>
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/Highway-Neural-Network', '_blank')">
+                            <img class="cardimg-l" src="static/highwayneuralnetwork.png">
+                            <p class="cardcontent-l specialtxt">Highway Neural Network</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
-                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/Snake-Game', '_blank')">
-                            <img class="cardimg-l" src="static/snake.png">
-                            <p class="cardcontent-l specialtxt">Retro Snake</p>
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/A-Star-Algorithm-Demo', '_blank')">
+                            <img class="cardimg-l" src="static/astar.png">
+                            <p class="cardcontent-l specialtxt">A* Algorithm Demo</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
-                        <div class="profcard-l" onclick="window.open('https://rafilalam.github.io/', '_blank')">
-                            <img class="cardimg-l" src="static/portfoliowebsite.png">
-                            <p class="cardcontent-l specialtxt">Static Portfolio Website</p>
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/DSA-Problemsets', '_blank')">
+                            <img class="cardimg-l" src="static/dsa.png">
+                            <p class="cardcontent-l specialtxt">Solved DSA Problemsets</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
                     </div>
