--- a/static/styles.css
+++ b/static/styles.css
@@ -272,6 +272,7 @@ main {
 .profcard-m {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     text-align: center;
     letter-spacing: 0.05em;
     line-height: 1.5;
