--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
                     <a class="navbtn btn med specialtxt" href="/"><i class="bi bi-code-slash"></i> Rafil</a>
                 </div>
                 <div class="island center">
-                    <a class="navbtn btn navselected" href="/"><i class="bi bi-house"></i> Home</a>
-                    <a class="navbtn btn" href="/projects"><i class="bi bi-archive"></i> My Projects</a>
-                    <a class="navbtn btn" href="/about"><i class="bi bi-file-earmark-person"></i> About Me</a>
+                    <a class="navbtn btn navselected" href="/"><i class="bi bi-house-fill"></i> Home</a>
+                    <a class="navbtn btn" href="/projects"><i class="bi bi-archive"></i> Projects</a>
+                    <a class="navbtn btn" href="/achievements"><i class="bi bi-trophy"></i> Achievements</a>
                 </div>
             </nav>
             
