Added Art Buddy
Added to shares.html

--- a/templates/share.html
+++ b/templates/share.html
@@ -42,6 +42,11 @@
                             <p class="cardcontent-l specialtxt">LightShot-WebScraper</p>
                             <p class="cardsubcontent-l">View Project</p>
                         </div>
+                        <div class="profcard-l" onclick="window.open('https://github.com/RafilAlam/ArtBuddy-WebApp', '_blank')">
+                            <img class="cardimg-l" src="static/artbuddy.png">
+                            <p class="cardcontent-l specialtxt">Art Buddy</p>
+                            <p class="cardsubcontent-l">View Project</p>
+                        </div>
                     </div>
                 </div>
             </div>
