Added Problem Solving (basic) certificate

--- a/templates/certification.html
+++ b/templates/certification.html
@@ -33,6 +33,11 @@
                             <p class="cardcontent-l specialtxt">Harvard University's CS50x</p>
                             <p class="cardsubcontent-l">View Certificate</p>
                         </div>
+                        <div class="profcard-l" onclick="window.open('https://www.hackerrank.com/certificates/4deebd3694a0', '_blank')">
+                            <img class="cardimg-l" src="static/basicproblemcert.png">
+                            <p class="cardcontent-l specialtxt">HackerRank's Problem Solving (Basic)</p>
+                            <p class="cardsubcontent-l">View Certificate</p>
+                        </div>
                     </div>
                 </div>
             </div>
